[project]
name = "voice-sdlc-relay"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
